# move_video_on_yandexdisk

./: .gitignore  README.md  move_video_on_disk.py  pyproject.toml  settings.py
log/: loggin_file.json
