[tool.poetry]
name = "move-video-on-yandexdisk"
version = "0.1.0"
description = ""
authors = ["Eywind <eywinddm@gmail.com>"]
readme = "README.md"
packages = [{include = "move_video_on_yandexdisk"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fake-useragent = "^0.1.11"
aiohttp = "^3.8.3"
cchardet = "^2.1.7"
aiodns = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
